tests/ui/const-generics/mgca/array-expr-complex.r1.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array-expr-complex.rs:11:52
   |
LL |     takes_array::<{ core::direct_const_arg!([1, 2, 1 + 2]) }>();
   |                                                    ^^^^^

error: aborting due to 1 previous error

